// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSortItemByColId should return a measureSortItem 1`] = `
Object {
  "measureSortItem": Object {
    "direction": "asc",
    "locators": Array [
      Object {
        "attributeLocatorItem": Object {
          "attributeIdentifier": "a_label.owner.region",
          "element": "/gdc/md/referenceworkspace/obj/1086/elements?id=460488",
        },
      },
      Object {
        "measureLocatorItem": Object {
          "measureIdentifier": "m_aangOxLSeztu",
        },
      },
    ],
  },
}
`;

exports[`getSortItemByColId should return an attributeSortItem 1`] = `
Object {
  "attributeSortItem": Object {
    "attributeIdentifier": "a_label.product.id.name",
    "direction": "asc",
  },
}
`;

exports[`getSortsFromModel should return sortItems for measure sort 1`] = `
Array [
  Object {
    "measureSortItem": Object {
      "direction": "asc",
      "locators": Array [
        Object {
          "attributeLocatorItem": Object {
            "attributeIdentifier": "a_label.owner.region",
            "element": "/gdc/md/referenceworkspace/obj/1086/elements?id=460488",
          },
        },
        Object {
          "measureLocatorItem": Object {
            "measureIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
    },
  },
]
`;

exports[`getSortsFromModel should return sortItems for row attribute sort 1`] = `
Array [
  Object {
    "attributeSortItem": Object {
      "attributeIdentifier": "a_label.product.id.name",
      "direction": "asc",
    },
  },
]
`;
